# DemoTreeView

./: CMakeLists.txt  README.txt  TreeDemo_ru_RU.ts  controller.cpp  controller.h  departmenteditdialog.cpp  departmenteditdialog.h  departmenteditdialog.ui  employeeeditdialog.cpp  employeeeditdialog.h  employeeeditdialog.ui  main.cpp  model.cpp  model.h  source_files.txt  treedemowindow.cpp  treedemowindow.h  treedemowindow.ui
